--- a/research/deeplab/cityscape_infer.ipynb
+++ b/research/deeplab/cityscape_infer.ipynb
@@ -7,7 +7,7 @@
     "id": "KFPcBuVFw61h"
    },
    "source": [
-    "# DeepLab Demo\n",
+    "# Cityscapes Inference Demo\n",
     "\n",
     "This demo will demostrate the steps to run deeplab semantic segmentation model on sample input images."
    ]
@@ -35,7 +35,6 @@
     "from io import BytesIO\n",
     "import tarfile\n",
     "import tempfile\n",
-    "from six.moves import urllib\n",
     "\n",
     "from matplotlib import gridspec\n",
     "from matplotlib import pyplot as plt\n",
@@ -63,13 +62,15 @@
    "source": [
     "#@title Helper methods\n",
     "\n",
+    "_DPI = 72\n",
+    "_FIG_SIZE = (12.0138, 6.75)\n",
     "\n",
     "class DeepLabModel(object):\n",
     "  \"\"\"Class to load deeplab model and run inference.\"\"\"\n",
     "\n",
     "  INPUT_TENSOR_NAME = 'ImageTensor:0'\n",
     "  OUTPUT_TENSOR_NAME = 'SemanticPredictions:0'\n",
-    "  INPUT_SIZE = 513\n",
+    "  INPUT_SIZE = 1280\n",
     "  FROZEN_GRAPH_NAME = 'frozen_inference_graph'\n",
     "\n",
     "  def __init__(self, trained_model_dir):\n",
@@ -87,7 +88,7 @@
     "\n",
     "    self.sess = tf.Session(graph=self.graph)\n",
     "\n",
-    "  def run(self, image):\n",
+    "  def run(self, image, verbose=False):\n",
     "    \"\"\"Runs inference on a single image.\n",
     "\n",
     "    Args:\n",
@@ -98,31 +99,16 @@
     "      seg_map: Segmentation map of `resized_image`.\n",
     "    \"\"\"\n",
     "    width, height = image.size\n",
+    "    if verbose: print(\"image size {}x{}\".format(width, height))\n",
     "    resize_ratio = 1.0 * self.INPUT_SIZE / max(width, height)\n",
     "    target_size = (int(resize_ratio * width), int(resize_ratio * height))\n",
     "    resized_image = image.convert('RGB').resize(target_size, Image.ANTIALIAS)\n",
+    "    if verbose: print(\"target size {}\".format(target_size))\n",
     "    batch_seg_map = self.sess.run(\n",
     "        self.OUTPUT_TENSOR_NAME,\n",
     "        feed_dict={self.INPUT_TENSOR_NAME: [np.asarray(resized_image)]})\n",
     "    seg_map = batch_seg_map[0]\n",
     "    return resized_image, seg_map\n",
-    "\n",
-    "\n",
-    "def create_pascal_label_colormap():\n",
-    "  \"\"\"Creates a label colormap used in PASCAL VOC segmentation benchmark.\n",
-    "\n",
-    "  Returns:\n",
-    "    A Colormap for visualizing segmentation results.\n",
-    "  \"\"\"\n",
-    "  colormap = np.zeros((256, 3), dtype=int)\n",
-    "  ind = np.arange(256, dtype=int)\n",
-    "\n",
-    "  for shift in reversed(range(8)):\n",
-    "    for channel in range(3):\n",
-    "      colormap[:, channel] |= ((ind >> channel) & 1) << shift\n",
-    "    ind >>= 3\n",
-    "\n",
-    "  return colormap\n",
     "\n",
     "\n",
     "def create_cityscapes_label_colormap():\n",
@@ -182,7 +168,7 @@
     "\n",
     "def vis_segmentation(image, seg_map):\n",
     "  \"\"\"Visualizes input image, segmentation map and overlay view.\"\"\"\n",
-    "  plt.figure(figsize=(15, 5))\n",
+    "  plt.figure(figsize=(36, 12))\n",
     "  grid_spec = gridspec.GridSpec(1, 4, width_ratios=[6, 6, 6, 1])\n",
     "\n",
     "  plt.subplot(grid_spec[0])\n",
@@ -212,6 +198,7 @@
     "  ax.tick_params(width=0.0)\n",
     "  plt.grid('off')\n",
     "  plt.show()\n",
+    "\n",
     "\n",
     "# Cityscapes labels\n",
     "LABEL_NAMES = np.asarray([\n",
@@ -259,19 +246,11 @@
    "source": [
     "#@title Select and download models {display-mode: \"form\"}\n",
     "\n",
-    "MODEL_NAME = 'mobilenetv2_coco_cityscapes_trainfine'  # @param ['mobilenetv2_coco_cityscapes_trainfine', 'xception65_cityscapes_trainfine', 'xception71_dpc_cityscapes_trainfine', 'xception71_dpc_cityscapes_trainval']\n",
+    "MODEL_NAME = 'xception71_dpc_cityscapes_trainfine'  # @param ['mobilenetv2_coco_cityscapes_trainfine', 'xception65_cityscapes_trainfine', 'xception71_dpc_cityscapes_trainfine', 'xception71_dpc_cityscapes_trainval']\n",
     "\n",
     "'''\n",
     "_DOWNLOAD_URL_PREFIX = 'http://download.tensorflow.org/models/'\n",
     "_MODEL_URLS = {\n",
-    "    'mobilenetv2_coco_voctrainaug':\n",
-    "        'deeplabv3_mnv2_pascal_train_aug_2018_01_29.tar.gz',\n",
-    "    'mobilenetv2_coco_voctrainval':\n",
-    "        'deeplabv3_mnv2_pascal_trainval_2018_01_29.tar.gz',\n",
-    "    'xception_coco_voctrainaug':\n",
-    "        'deeplabv3_pascal_train_aug_2018_01_04.tar.gz',\n",
-    "    'xception_coco_voctrainval':\n",
-    "        'deeplabv3_pascal_trainval_2018_01_04.tar.gz',\n",
     "    'mobilenetv2_coco_cityscapes_trainfine':\n",
     "        'deeplabv3_mnv2_cityscapes_train_2018_02_05.tar.gz',\n",
     "    'xception65_cityscapes_trainfine':\n",
@@ -284,7 +263,7 @@
     "'''\n",
     "\n",
     "# Extract above pre-trained model tar.gz files to the following folder.\n",
-    "_PROJECT_DIR = '/research/deeplab/trained_models/'\n",
+    "_PROJECT_DIR = '/home/ritpower/rick/deeplab/trained_models/'\n",
     "_MODEL_DIR = {\n",
     "    'mobilenetv2_coco_cityscapes_trainfine':\n",
     "        'deeplabv3_mnv2_cityscapes_train',\n",
@@ -332,40 +311,47 @@
      }
     },
     "colab_type": "code",
-    "id": "edGukUHXyymr"
+    "id": "7XrFNGsxzSIB"
    },
    "outputs": [],
    "source": [
-    "#@title Run on sample images {display-mode: \"form\"}\n",
+    "def save_vis(image, seg_map, file_name):\n",
+    "  print(\"type(image) {}\".format(type(image)))\n",
+    "  print(\"type(seg_map) {}\".format(type(seg_map)))\n",
+    "  print(\"seg_map.shape {}\".format(seg_map.shape))\n",
+    "  seg_image = label_to_color_image(seg_map).astype(np.uint8)\n",
+    "  print(\"type(seg_image) {}\".format(type(seg_image)))\n",
+    "  print(\"seg_image.shape {}\".format(seg_image.shape))\n",
+    "  fig = plt.figure(figsize=_FIG_SIZE)\n",
+    "  plt.imshow(image)\n",
+    "  plt.imshow(seg_image, alpha=0.7)\n",
+    "  plt.axis('off')\n",
+    "  plt.grid('off')\n",
+    "  print(\"Writing to {}\".format(file_name))\n",
+    "  plt.savefig(file_name, dpi=_DPI, bbox_inches='tight')\n",
+    "  plt.close(fig)\n",
+    "    \n",
+    "  im = np.asarray(image)\n",
+    "  print(\"type(im) {}\".format(type(im)))\n",
+    "  print(\"im.shape {}\".format(im.shape))\n",
     "\n",
-    "SAMPLE_IMAGE = 'image1'  # @param ['image1', 'image2', 'image3']\n",
-    "IMAGE_URL = ''  #@param {type:\"string\"}\n",
-    "\n",
-    "_SAMPLE_URL = ('https://github.com/tensorflow/models/raw/master/research/'\n",
-    "               'deeplab/g3doc/img/%s.jpg')\n",
-    "\n",
-    "\n",
-    "def run_visualization(url):\n",
-    "  \"\"\"Inferences DeepLab model and visualizes result.\"\"\"\n",
-    "  try:\n",
-    "    f = urllib.request.urlopen(url)\n",
-    "    jpeg_str = f.read()\n",
-    "    original_im = Image.open(BytesIO(jpeg_str))\n",
-    "  except IOError:\n",
-    "    print('Cannot retrieve image. Please check url: ' + url)\n",
-    "    return\n",
-    "\n",
-    "  print('running deeplab on image %s...' % url)\n",
-    "  t0 = datetime.now()\n",
-    "  resized_im, seg_map = MODEL.run(original_im)\n",
-    "  print(\"Infered in {} seconds\".format((datetime.now()-t0).total_seconds()))\n",
-    "\n",
-    "  print('running visualization...')\n",
-    "  vis_segmentation(resized_im, seg_map)\n",
-    "\n",
-    "\n",
-    "image_url = IMAGE_URL or _SAMPLE_URL % SAMPLE_IMAGE\n",
-    "run_visualization(image_url)"
+    "def nparray_info(x):\n",
+    "    print(\"shape {} dtype {} max {} min {}\".format(x.shape, x.dtype, np.amax(x), np.amin(x)))\n",
+    "    \n",
+    "def pillow_info(x):\n",
+    "    print(\"mode {} size {}\".format(x.mode, x.size))\n",
+    "    \n",
+    "def save_vis_jpg(image, seg_map, file_name, verbose=False):\n",
+    "    if verbose: print(\"save_vis_jpg\")\n",
+    "    if verbose: print(\"type(seg_map) {}\".format(type(seg_map)))\n",
+    "    if verbose: nparray_info(seg_map)\n",
+    "    seg_image = label_to_color_image(seg_map).astype(np.uint8)\n",
+    "    if verbose: nparray_info(seg_image)\n",
+    "    seg_image = Image.fromarray(np.uint8(seg_image))\n",
+    "    if verbose: pillow_info(image)\n",
+    "    if verbose: pillow_info(seg_image)\n",
+    "    blended = Image.blend(image, seg_image, alpha=0.6)\n",
+    "    blended.save(file_name, 'JPEG', quality=80)"
    ]
   },
   {
@@ -379,8 +365,82 @@
      }
     },
     "colab_type": "code",
-    "id": "7XrFNGsxzSIB"
+    "id": "edGukUHXyymr"
    },
+   "outputs": [],
+   "source": [
+    "#@title Run on sample images {display-mode: \"form\"}\n",
+    "\n",
+    "FILE = '/home/ritpower/rick/deeplab/0033.jpg'\n",
+    "OUT_FILE = '/home/ritpower/rick/deeplab/0033.overlay.jpg'\n",
+    "\n",
+    "def run_visualization(file_name, out_file, verbose=False):\n",
+    "  \"\"\"Inferences DeepLab model and visualizes result.\"\"\"\n",
+    "  with open(file_name, 'rb') as f:\n",
+    "    jpeg_str = f.read()\n",
+    "    original_im = Image.open(BytesIO(jpeg_str))\n",
+    "\n",
+    "  if verbose: print('running deeplab on image %s...' % file_name)\n",
+    "  t0 = datetime.now()\n",
+    "  resized_im, seg_map = MODEL.run(original_im)\n",
+    "  if verbose: print(\"Infered in {} seconds\".format((datetime.now()-t0).total_seconds()))\n",
+    "\n",
+    "  if verbose: print('running visualization...')\n",
+    "  if verbose: vis_segmentation(resized_im, seg_map)\n",
+    "    \n",
+    "  #save_vis(resized_im, seg_map, out_file)\n",
+    "  save_vis_jpg(resized_im, seg_map, out_file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_visualization(FILE, OUT_FILE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INPUT_DIR = '/home/ritpower/rick/deeplab/data/'\n",
+    "OUTPUT_DIR = '/home/ritpower/rick/deeplab/data_out/'\n",
+    "import glob\n",
+    "all_files = glob.glob(INPUT_DIR + \"*.jpg\")\n",
+    "len(all_files)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(all_files[0])\n",
+    "print(os.path.basename(all_files[0]))\n",
+    "print(os.path.dirname(all_files[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for f in all_files:\n",
+    "    out_f = OUTPUT_DIR + os.path.basename(f)\n",
+    "    #print(out_f)\n",
+    "    run_visualization(f, out_f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -409,7 +469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
