--- a/research/deeplab/cityscape_offline_file.ipynb
+++ b/research/deeplab/cityscape_offline_file.ipynb
@@ -30,6 +30,7 @@
    "source": [
     "#@title Imports\n",
     "\n",
+    "from datetime import datetime\n",
     "import os\n",
     "from io import BytesIO\n",
     "import tarfile\n",
@@ -68,26 +69,18 @@
     "\n",
     "  INPUT_TENSOR_NAME = 'ImageTensor:0'\n",
     "  OUTPUT_TENSOR_NAME = 'SemanticPredictions:0'\n",
-    "  INPUT_SIZE = 513\n",
+    "  INPUT_SIZE = 849\n",
     "  FROZEN_GRAPH_NAME = 'frozen_inference_graph'\n",
     "\n",
-    "  def __init__(self, tarball_path):\n",
-    "    \"\"\"Creates and loads pretrained deeplab model.\"\"\"\n",
+    "  def __init__(self, trained_model_dir):\n",
+    "    \"\"\"Loads pretrained deeplab model.\"\"\"\n",
     "    self.graph = tf.Graph()\n",
     "\n",
-    "    graph_def = None\n",
-    "    # Extract frozen graph from tar archive.\n",
-    "    tar_file = tarfile.open(tarball_path)\n",
-    "    for tar_info in tar_file.getmembers():\n",
-    "      if self.FROZEN_GRAPH_NAME in os.path.basename(tar_info.name):\n",
-    "        file_handle = tar_file.extractfile(tar_info)\n",
-    "        graph_def = tf.GraphDef.FromString(file_handle.read())\n",
-    "        break\n",
-    "\n",
-    "    tar_file.close()\n",
-    "\n",
-    "    if graph_def is None:\n",
-    "      raise RuntimeError('Cannot find inference graph in tar archive.')\n",
+    "    file_name = trained_model_dir + self.FROZEN_GRAPH_NAME + '.pb'\n",
+    "    #file_name = '/research/deeplab/trained_models/deeplabv3_mnv2_cityscapes_train/frozen_inference_graph.pb'\n",
+    "        \n",
+    "    with open(file_name, 'rb') as f:\n",
+    "      graph_def = tf.GraphDef.FromString(f.read())\n",
     "\n",
     "    with self.graph.as_default():\n",
     "      tf.import_graph_def(graph_def, name='')\n",
@@ -105,9 +98,11 @@
     "      seg_map: Segmentation map of `resized_image`.\n",
     "    \"\"\"\n",
     "    width, height = image.size\n",
+    "    print(\"image size {}x{}\".format(width, height))\n",
     "    resize_ratio = 1.0 * self.INPUT_SIZE / max(width, height)\n",
     "    target_size = (int(resize_ratio * width), int(resize_ratio * height))\n",
     "    resized_image = image.convert('RGB').resize(target_size, Image.ANTIALIAS)\n",
+    "    print(\"target size {}\".format(target_size))\n",
     "    batch_seg_map = self.sess.run(\n",
     "        self.OUTPUT_TENSOR_NAME,\n",
     "        feed_dict={self.INPUT_TENSOR_NAME: [np.asarray(resized_image)]})\n",
@@ -189,7 +184,7 @@
     "\n",
     "def vis_segmentation(image, seg_map):\n",
     "  \"\"\"Visualizes input image, segmentation map and overlay view.\"\"\"\n",
-    "  plt.figure(figsize=(15, 5))\n",
+    "  plt.figure(figsize=(30, 10))\n",
     "  grid_spec = gridspec.GridSpec(1, 4, width_ratios=[6, 6, 6, 1])\n",
     "\n",
     "  plt.subplot(grid_spec[0])\n",
@@ -220,13 +215,6 @@
     "  plt.grid('off')\n",
     "  plt.show()\n",
     "\n",
-    "'''\n",
-    "LABEL_NAMES = np.asarray([\n",
-    "    'background', 'aeroplane', 'bicycle', 'bird', 'boat', 'bottle', 'bus',\n",
-    "    'car', 'cat', 'chair', 'cow', 'diningtable', 'dog', 'horse', 'motorbike',\n",
-    "    'person', 'pottedplant', 'sheep', 'sofa', 'train', 'tv'\n",
-    "])\n",
-    "'''\n",
     "# Cityscapes labels\n",
     "LABEL_NAMES = np.asarray([\n",
     "    'road', \n",
@@ -275,8 +263,17 @@
     "\n",
     "MODEL_NAME = 'mobilenetv2_coco_cityscapes_trainfine'  # @param ['mobilenetv2_coco_cityscapes_trainfine', 'xception65_cityscapes_trainfine', 'xception71_dpc_cityscapes_trainfine', 'xception71_dpc_cityscapes_trainval']\n",
     "\n",
+    "'''\n",
     "_DOWNLOAD_URL_PREFIX = 'http://download.tensorflow.org/models/'\n",
     "_MODEL_URLS = {\n",
+    "    'mobilenetv2_coco_voctrainaug':\n",
+    "        'deeplabv3_mnv2_pascal_train_aug_2018_01_29.tar.gz',\n",
+    "    'mobilenetv2_coco_voctrainval':\n",
+    "        'deeplabv3_mnv2_pascal_trainval_2018_01_29.tar.gz',\n",
+    "    'xception_coco_voctrainaug':\n",
+    "        'deeplabv3_pascal_train_aug_2018_01_04.tar.gz',\n",
+    "    'xception_coco_voctrainval':\n",
+    "        'deeplabv3_pascal_trainval_2018_01_04.tar.gz',\n",
     "    'mobilenetv2_coco_cityscapes_trainfine':\n",
     "        'deeplabv3_mnv2_cityscapes_train_2018_02_05.tar.gz',\n",
     "    'xception65_cityscapes_trainfine':\n",
@@ -284,23 +281,28 @@
     "    'xception71_dpc_cityscapes_trainfine':\n",
     "        'deeplab_cityscapes_xception71_trainfine_2018_09_08.tar.gz',\n",
     "    'xception71_dpc_cityscapes_trainval':\n",
-    "        'deeplab_cityscapes_xception71_trainvalfine_2018_09_08.tar.gz',\n",
-    "    \n",
+    "        'deeplab_cityscapes_xception71_trainvalfine_2018_09_08.tar.gz',    \n",
     "}\n",
-    "_TARBALL_NAME = 'deeplab_model.tar.gz'\n",
+    "'''\n",
     "\n",
-    "model_dir = tempfile.mkdtemp()\n",
-    "print('mode_dir: {}'.format(model_dir))\n",
-    "tf.gfile.MakeDirs(model_dir)\n",
+    "# Extract above pre-trained model tar.gz files to the following folder.\n",
+    "#_PROJECT_DIR = '/research/deeplab/trained_models/'\n",
+    "_PROJECT_DIR = '/home/ritpower/rick/deeplab/trained_models/'\n",
+    "_MODEL_DIR = {\n",
+    "    'mobilenetv2_coco_cityscapes_trainfine':\n",
+    "        'deeplabv3_mnv2_cityscapes_train',\n",
+    "    'xception65_cityscapes_trainfine':\n",
+    "        'deeplabv3_cityscapes_train',\n",
+    "    'xception71_dpc_cityscapes_trainfine':\n",
+    "        'train_fine',\n",
+    "    'xception71_dpc_cityscapes_trainval':\n",
+    "        'trainval_fine',\n",
+    "}\n",
     "\n",
-    "download_path = os.path.join(model_dir, _TARBALL_NAME)\n",
-    "print('download path: {}'.format(download_path))\n",
-    "print('downloading model, this might take a while...')\n",
-    "urllib.request.urlretrieve(_DOWNLOAD_URL_PREFIX + _MODEL_URLS[MODEL_NAME],\n",
-    "                   download_path)\n",
-    "print('download completed! loading DeepLab model...')\n",
+    "model_path = _PROJECT_DIR + _MODEL_DIR[MODEL_NAME] + '/'\n",
+    "print('model_path: {}'.format(model_path))\n",
     "\n",
-    "MODEL = DeepLabModel(download_path)\n",
+    "MODEL = DeepLabModel(model_path)\n",
     "print('model loaded successfully!')"
    ]
   },
@@ -339,33 +341,25 @@
    "source": [
     "#@title Run on sample images {display-mode: \"form\"}\n",
     "\n",
-    "SAMPLE_IMAGE = 'image1'  # @param ['image1', 'image2', 'image3']\n",
-    "#IMAGE_URL = 'https://github.com/tensorflow/models/raw/master/research/deeplab/g3doc/img/image1.jpg'  #@param {type:\"string\"}\n",
-    "IMAGE_URL = ''  #@param {type:\"string\"}\n",
-    "\n",
-    "_SAMPLE_URL = ('https://github.com/tensorflow/models/raw/master/research/'\n",
-    "               'deeplab/g3doc/img/%s.jpg')\n",
+    "FILE = '/home/ritpower/rick/deeplab/data/0033.jpg'\n",
     "\n",
     "\n",
-    "def run_visualization(url):\n",
+    "def run_visualization(file_name):\n",
     "  \"\"\"Inferences DeepLab model and visualizes result.\"\"\"\n",
-    "  try:\n",
-    "    f = urllib.request.urlopen(url)\n",
+    "  with open(file_name, 'rb') as f:\n",
     "    jpeg_str = f.read()\n",
     "    original_im = Image.open(BytesIO(jpeg_str))\n",
-    "  except IOError:\n",
-    "    print('Cannot retrieve image. Please check url: ' + url)\n",
-    "    return\n",
     "\n",
-    "  print('running deeplab on image %s...' % url)\n",
+    "  print('running deeplab on image %s...' % file_name)\n",
+    "  t0 = datetime.now()\n",
     "  resized_im, seg_map = MODEL.run(original_im)\n",
+    "  print(\"Infered in {} seconds\".format((datetime.now()-t0).total_seconds()))\n",
     "\n",
     "  print('running visualization...')\n",
     "  vis_segmentation(resized_im, seg_map)\n",
     "\n",
     "\n",
-    "image_url = IMAGE_URL or _SAMPLE_URL % SAMPLE_IMAGE\n",
-    "run_visualization(image_url)"
+    "run_visualization(FILE)"
    ]
   },
   {
@@ -409,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
